--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -41,7 +41,7 @@ jobs:
           SERVER_PORT: '22'  # SSH端口
           FOLDER: ./  # 要推送的文件夹，路径相对于代码仓库的根目录
           SERVER_IP: ${{ secrets.ANOTHER_USER_HOST }}  # 引用配置，服务器的host名（IP或者域名domain.com）
-          USERNAME: ${{ secrets.SSH_USERNAME }}  # 引用配置，服务器登录名
+          USERNAME: ${{ secrets.SSH_USER_NAME }}  # 引用配置，服务器登录名
           SERVER_DESTINATION: /home/mysite/   # 部署到目标文件夹
           
       - name: Deploy
