--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,23 +31,11 @@ jobs:
           docker push ${{ secrets.REGISTRY }}:latest
         env:
           CI: true
-
-      # Deploy
-      - name: Deploy to Server  # 第二步，rsync推文件
-        uses: AEnterprise/rsync-deploy@v1.0  # 使用别人包装好的步骤镜像
-        env:
-          DEPLOY_KEY: ${{ secrets.ANOTHER_DEPLOY_KEY }}   # 引用配置，SSH私钥
-          ARGS: -avz --delete --exclude='*.pyc'   # rsync参数，排除.pyc文件
-          SERVER_PORT: '22'  # SSH端口
-          FOLDER: ./  # 要推送的文件夹，路径相对于代码仓库的根目录
-          SERVER_IP: ${{ secrets.ANOTHER_USER_HOST }}  # 引用配置，服务器的host名（IP或者域名domain.com）
-          USERNAME: ${{ secrets.SSH_USER_NAME }}  # 引用配置，服务器登录名
-          SERVER_DESTINATION: /home/mysite/   # 部署到目标文件夹
           
       - name: Deploy
         uses: appleboy/ssh-action@master
         with:
-          host: ${{ secrets.ANOTHER_USER_HOST }}
+          host: ${{ secrets.SSH_USER_HOST }}
           username: ${{ secrets.SSH_USER_NAME }}
           password: ${{ secrets.SSH_USER_PWD }}
           port: ${{ secrets.PORT }}
